--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "node-sass": "^4.14.1",
     "sass-loader": "^10.0.3",
     "vue": "^2.6.11",
-    "vue-router": "^3.4.8"
+    "vue-router": "^3.4.8",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
